# mlflow

./: Dockerfile.app  namespace-implementation-final.md
.github/workflows/: master.yml
docs/api_reference/: api_inventory.txt
mlflow/: __init__.py  environment_variables.py
mlflow-multitenancy-plugin/: README.md  deployment.yaml  pyproject.toml
mlflow-multitenancy-plugin/src/mlflow_multitenancy_plugin/: __init__.py  request_header_provider.py  store.py
mlflow-multitenancy-plugin/src/mlflow_multitenancy_plugin/server/: __init__.py  app.py  asgi.py  middleware.py  ssar.py  store_wrappers.py
mlflow/cli/: __init__.py
mlflow/entities/: evaluation_dataset.py
mlflow/entities/model_registry/: registered_model.py
mlflow/models/: model.py
mlflow/server/: __init__.py  fastapi_app.py  handlers.py  workspace_helpers.py
mlflow/server/auth/: __init__.py  client.py  entities.py  sqlalchemy_store.py
mlflow/store/artifact/: artifact_repo.py
mlflow/store/model_registry/: sqlalchemy_store.py
mlflow/store/tracking/: rest_store.py  sqlalchemy_store.py
mlflow/store/workspace/: __init__.py  rest_store.py  sqlalchemy_store.py
mlflow/tracking/: client.py  fluent.py
mlflow/utils/: rest_utils.py
tests/: conftest.py  test_cli.py
tests/db/: check_migration.py  test_workspace_migration.py
tests/entities/: test_experiment.py
tests/server/: test_handlers.py  test_init.py  test_otel_api.py  test_workspace_handlers.py
tests/tracking/: test_client_workspace.py  test_rest_tracking.py  test_workspace_registry.py
tests/utils/: test_rest_utils.py
(+77 files in other folders)
